<resources>
    <string name="app_name">Proyecto Final</string>
    <string name="Text3">BMI Calculator</string>
    <string name="Text4">Weight (kg)</string>
    <string name="Text5">Height (m)</string>
    <string name="Text1">Your BMI is:</string>
    <string-array name="Spinner1">
        <item> 50 </item>
        <item> 55 </item>
        <item> 60 </item>
        <item> 65 </item>
        <item> 70 </item>
        <item> 75 </item>
        <item> 80 </item>
        <item> 85 </item>
        <item> 90 </item>
        <item> 95 </item>
        <item> 100 </item>
        <item> 105 </item>
        <item> 110 </item>
        <item> 115 </item>
        <item> 120 </item>
        <item> 125 </item>
        <item> 130 </item>
        <item> 135 </item>
    </string-array>
    <string-array name="Spinner2">
        <item> 1.50 </item>
        <item> 1.55 </item>
        <item> 1.60 </item>
        <item> 1.65 </item>
        <item> 1.70 </item>
        <item> 1.75 </item>
        <item> 1.80 </item>
        <item> 1.85 </item>
        <item> 1.90 </item>
        <item> 1.95 </item>
        <item> 2 </item>
        <item> 2.05 </item>
        <item> 2.10 </item>
    </string-array>
    <string name="Boton1">Reboot</string>
    <string name="Boton2">Calculate</string>
</resources>